welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:17: error: value ==- is not a member of Int
    if (x==-1)
         ^